--- a/.env
+++ b/.env
@@ -3,4 +3,6 @@ DB_USER=postgres
 DB_HOST=db
 DB_PORT=5432
 DB_PASSWORD=1
+REDIS_HOST=redis
+REDIS_PORT=6379
 GOOGLE_APPLICATION_CREDENTIALS=./objective-platform-project-e4ca5f6d1b5c.json
